Added the HTML5 meta for Mobile devices.

--- a/web/index.html
+++ b/web/index.html
@@ -8,6 +8,7 @@
     <meta content="Display the multiplication process including the carry numbers and the sums." name="description">
     <meta content="Israel Roldan" name="author">
 
+    <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
     <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
     <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
