Refactored the web section.

--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
         <p>
             <strong>Options:</strong><br>
 
-            Print description:
+            <label for="print_description_yes">Print description:</label>
             <input checked id="print_description_yes" name="print_description" type="radio" value="yes">
             <label for="print_description_yes">Yes</label>
 
